# esp-satori-eye

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
components/cat_detect/: CMakeLists.txt  idf_component.yml
main/: CMakeLists.txt  ai.cpp  ai.h  benchmark.c  camera.c  camera.h  context.c  context.h  esp-satori-eye.c  idf_component.yml  web_server.c  web_server.h  wifi.c  wifi.h
main/web_src/: index.html
